public class Params 
{
    public const float CenterRoad = 0;
    public const float OneHundredPercent = 100;
    public const string Attack = "Attack";
    public const string Fall = "Fall";
    public const string Stop = "Stop";
    public const string Start = "Start";
    public const string HangRope = "HangRope";
    public const string Run = "Run";
    public const string PullRope = "PullRope";
    public const string Victory = "Victory";
    public const string Win = "Win";
}
